# mcp-server-starrocks

./: README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_server_starrocks/: db_client.py  secret_resolver.py  server.py  table_management_tools.py
tests/: test_db_client.py  test_ssl_options.py
